<resources>
    <string name="Description_of_dictionary_functionality">To allow integration with <i>any</i> installed
         dictionary, please pick your desired dictionary from the following
         list of all apps that handle text.</string>
    <string name="close_panel_info_notice"><big><b>The More You Know</b></big>
        \n1. If you have opened <i>Table of Contents</i> or <i>Metadata</i> and want to close them,
        you can use the <i>Back button</i> of your device.
        \n\n2. Instead of closing a panel, you can temporarily <i>hide it!</i></string>
    <string name="hide_panel_info_notice"><big><b>The More You Know</b></big>
        \nYou can hide a panel by double tapping in it, <i>leaving the finger on the screen after that second tap,</i>
        and swiping left or right! (Up or down in landscape mode.)
        \n\nAnd that same gesture will bring it back up.</string>
    <string name="panel_size_dialog_info_notice"><big><b>The More You Know</b></big>
        \nYou can change panel size by double tapping anywhere on the text in the panels,
        <i>leaving the finger on the screen after that second tap,</i> and swiping up or down!
        (Left or right in landscape mode.)</string>
    <string name="fullscreen_dialog_info_notice"><big><b>The More You Know</b></big>
        \nYou can switch to and from the fullscreen mode by single tapping
        anywhere on the text in the panels!</string>
    <string name="Dictionary_dialog_info_msg"><big><b>The More You Know</b></big>
        \nBy long pressing your finger on a word on the screen, you will open a new menu with the option
        to open a dictionary in search of the selected text.</string>
    <string name="export_srs_dialog_info_text"><big><b>Do not change</b></big>
        \nthe following export settings unless you <i>really</i> know what you\'re doing.
        The default settings should work without problem with most SRS programs (such as Anki).</string>
    <string name="Export_successful_info_msg"><big><b>Export successful!</b></big>
        \nClick <b>Share exported file</b> to open the file in some other application,
        such as an attachment in an Email client.
        \n\nExported file can be found at:\n</string>
    <string name="Scroll_Sync_info_msg"><big><b>The More You Know</b></big>
        \nIf the synchronization doesn\'t fit, use <b>two fingers to scroll</b> one of the books
        without the other to adjust the synchronization.</string>
    <string name="Proportional_Scroll_Sync_info_msg" formatted="false">With <i>Proportional</i> synchronization
        the books are synced in proportion to their length. If you scroll one book to 30% of its length
        the other one will be automatically scrolled to 30% as well.
        
        \n\nThis method works best if both book pages contain the same amount of text. For instance the same chapter.
        
        \n\n<b>If the books get out of sync</b> at some point, <b>scroll one book with two fingers</b> so that
        you can again see the same text in both panels. The synchronization will be adjusted accordingly.</string>
    <string name="Linear_Scroll_Sync_info_msg">With <i>Linear</i> synchronization
        the books are synced 1:1. If you scroll one book X pixels, the other one will be scrolled X pixels as well.
        
        \n\n<b>Use this method only if the other two are unsuitable.</b>
        
        \n\nIf the books get <i>out of sync</i> at some point, <i>scroll one book with two fingers</i> so that
        you can again see the same text in both panels. The synchronization will be adjusted accordingly.</string>
    <string name="Sync_Points_Scroll_Sync_info_msg">First, scroll both books to any point where
        you can see the <i>same</i> text in both panels. For instance, find a <i>paragraph in both books</i>,
        and scroll both panels so that it is the first paragraph visible in each of them.
        \nThen go here to the <i>Scroll Synchronization dialog</i> and set it as <i>Sync <b>Point 1</b></i>.
        
        \n\nNow find a 2nd <i>Sync Point</i> far away from the first one and set it.
        Afterwards click <i>OK</i> and synchronization will be activated.
        
        \n\n<i>This is the most precise method, but it takes effort to set up.</i> 
        
        \n\n<b>If the books get out of sync</b> at some point, you can either <b>recompute the sync by
        setting new <i>Sync Points</i></b>, or <b>scroll one book with two fingers</b> so that
        you can again see the same text in both panels. The synchronization will be adjusted accordingly.</string>
    <string name="infobox_recently_opened_books"><big><b>Welcome to Bilingual Reader</b></big>
        \nIf you have two ebooks each with different translation of the same book,
        please open one of them now.
        \n\nWe support ebooks in the EPUB format, if the ebook is in a different one,
        please use any convertor (such as Calibre) to convert it to EPUB.</string>
    <string name="infobox_reader_activity"><big><b>Ebook opened</b></big>
        \nIf you\'ve just opened the first ebook, click on the app logo and open a 2nd ebook with
        the other translation!
        
        \n\n<big><b>Navigation</b></big>
        \nTo move between pages of the ebook, swipe your finger left or right over the page.
        
        \n\n<big><b>Synchronization</b></big>
        \nTo help with bilingual synchronization, try the 3 buttons on the panel above.
        <i>First the left one</i>, then the second from the left.</string>
    <string name="infobox_metadata_or_toc"><big><b>Get back</b></big>
        \nRemember, to get back to reading the book just press the
        <b><i>Back button</i></b> on your device!</string>
    <string name="infobox_chapter_sync"><big><b>Chapter Sync was activated</b></big>
        \nThis button activates or <i>de</i>activates <b><i>Chapter Synchronization</i></b>.
        
        \n\nWhen <i>Chapter Sync</i> is active, if you move to the <b>next or previous page in one book</b>
        (by swiping your finger left or right), the <b>other book will change page as well</b>.
        
        \n\n<big><b>Best use</b></big>
        \nWhile Chapter Sync is off, find the same chapter in both books, for example the <b>first chapter</b>,
        and then <b>activate Chapter Sync</b>. From then on, the chapters will be synchronized.</string>
    <string name="infobox_scroll_sync"><big><b>Scroll Sync was activated</b></big>
        \nThis button activates or <i>de</i>activates <b><i>Scroll Synchronization</i></b>.
        
        \n\nWhen <i>Scroll Sync</i> is active, if you <b>scroll one of the books</b> up or down,
        the <b>other one will be scrolled as well</b>.
        
        \n\n<big><b>Scroll Sync Methods</b></big>
        \nKnowing how much to scroll the other book is difficult, so there are several methods we can use.
        Use the <b>second button (Wrench)</b> to chose between scroll sync methods.
        
        \n\nIf you activate scroll sync without picking a method, the
        <b>default <i>Proportional Sync</i> method</b> will be used.</string>
    <string name="Remove_original_styles_info_msg"><big><b>Remove original styles</b></big>
        \nIf you\'ve set some visual options, but they aren\'t changed in the book,
        it is because they <i>conflict</i> with the default visual options contained in the e-book.
        
        \n\nIf you <b>enable this option</b>, the original styles will be removed and <b>your settings will work</b>.</string>
    <string name="app_name">Bilingual Reader</string>
    <string name="Open_Book_1">Open Book 1</string>
    <string name="Open_Book_2">Open Book 2</string>
    <string name="Activate_bilingual_ebook">Activate bilingual ebook</string>
    <string name="Sync_Chapters">Sync Chapters</string>
    <string name="Reset_Sync_Views">Reset Sync Views</string>
    <string name="Show_Metadata">Show Metadata</string>
    <string name="Refresh">Refresh</string>
    <string name="From_Book_1">From Book 1</string>
    <string name="From_Book_2">From Book 2</string>
    <string name="Sync_Book_1_with_Book_2">Sync Book 1 with Book 2</string>
    <string name="Sync_Book_2_with_Book_1">Sync Book 2 with Book 1</string>
    <string name="Book_1">Book 1</string>
    <string name="Book_2">Book 2</string>
    <string name="bookOpen">bookOpen</string>
    <string name="Table_of_Contents">Table of Contents</string>
    <string name="Change_Size">Change Panel Size</string>
    <string name="error_LoadPage">Can not load the page</string>
    <string name="error_LoadBook">Cannot load the book</string>
    <string name="error_readingFile">Error while reading a file.</string>
    <string name="error_onlyOneBookOpen">Only one book open!</string>
    <string name="error_cannotSynchronize">Cannot synchronize!</string>
    <string name="error_metadataNotFound">Metadata not found!</string>
    <string name="error_tocNotFound">Table of Contents not Found!</string>
    <string name="error_cannotChangeSizes">Can not change sizes!</string>
    <string name="url">url</string>
    <string name="bpath">bpath</string>
    <string name="invisible">invisible</string>
    <string name="second">second</string>
    <string name="time">time</string>
    <string name="error_cannotTurnPage">Error occurred while turning Page.</string>
    <string name="tome">tome</string>
    <string name="lang">lang</string>
    <string name="error_noOtherLanguages">No other languages!</string>
    <string name="state">state</string>
    <string name="error_cannotLoadState">Cannot load the application/book state</string>
    <string name="textOrHTML">text/html</string>
    <string name="sync">sync</string>
    <string name="chapterSync">chapterSync</string>
    <string name="scrollSync">scrollSync</string>
    <string name="page">page</string>
    <string name="CurrentPageBook">CurrentPageBook</string>
    <string name="LanguageBook">LanguageBook</string>
    <string name="pathBook">pathBook</string>
    <string name="error_CannotCloseStream">Cannot close stream!</string>
    <string name="Book_Stream">Book Stream</string>
    <string name="nameEpub">nameEpub</string>
    <string name="error_goToPage">goToPage error:</string>
    <string name="change_Font_Color">Font Color:</string>
    <string name="Change_Style">Change Style</string>
    <string name="ChangeBackgroundColor">Background Color:</string>
    <string name="Sync_Scroll">Sync Scroll</string>
    <string name="ChangeFont">Font:</string>
    <string name="FontSize">Font Size:</string>
    <string name="LineHeight">Line Height:</string>
    <string name="TextAlign">Alignment:</string>
    <string name="DefaultSettings">Reset to default</string>
    <string name="Extract_Audio">Extract Audio</string>
    <string name="default_dictionary_colon">Default dictionary:</string>
    <string name="Test_this_dictionary_app">Test this dictionary app.</string>
    <string name="Exit">Exit</string>
    <string name="Panel_1_empty">Panel 1 is empty.</string>
    <string name="Panel_2_empty">Panel 2 is empty.</string>
    <string name="Open_book_1_dots">Open book 1...</string>
    <string name="Open_book_2_dots">Open book 2...</string>
    <string name="SRS_Database">SRS Database</string>
    <string name="Search">Search</string>
    <string name="Sort_Alphabetically">Sort Alphabetically</string>
    <string name="Close_panel">Close panel</string>
    <string name="Hide_panel">Hide panel</string>
    <string name="Fullscreen">Fullscreen</string>
    <string name="Open_a_new_file">Open a new file</string>
    <string name="Sort_by_Last_Opened">Sort by Last Opened</string>
    <string name="List_of_All_EPUBs">List of All EPUBs</string>
    <string name="Dictionary">Dictionary</string>
    <string name="Would_You_Like_to_Know_More">Would You Like to Know More?</string>
    <string name="Visual_Options">Visual Options</string>
</resources>