<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/sync_scroll_menu_item"
        android:icon="@android:drawable/ic_menu_view"
        android:showAsAction="always"
        android:title="@string/Sync_Scroll"
        android:visible="true">
    </item>
    <item
        android:id="@+id/sync_chapters_menu_item"
        android:icon="@android:drawable/ic_menu_set_as"
        android:showAsAction="always"
        android:title="@string/Sync_Chapters"
        android:visible="true">
    </item>
    <item
        android:id="@+id/table_of_contents_menu_item"
        android:showAsAction="ifRoom"
        android:title="@string/Table_of_Contents">
        <menu>
            <item
                android:id="@+id/table_of_contents_1_menu_item"
                android:title="@string/Book_1"
                android:visible="false"/>
            <item
                android:id="@+id/table_of_contents_2_menu_item"
                android:title="@string/Book_2"
                android:visible="false"/>
        </menu>
    </item>
    <item
        android:id="@+id/metadata_menu_item"
        android:showAsAction="ifRoom"
        android:title="@string/Show_Metadata">
        <menu>
            <item
                android:id="@+id/metadata_1_menu_item"
                android:title="@string/Book_1"
                android:visible="false"/>
            <item
                android:id="@+id/metadata_2_menu_item"
                android:title="@string/Book_2"
                android:visible="false"/>
        </menu>
    </item>
    <item
        android:id="@+id/change_size_menu_item"
        android:icon="@android:drawable/ic_menu_crop"
        android:showAsAction="ifRoom"
        android:title="@string/Change_Size"
        android:visible="true">
    </item>
    <item
        android:id="@+id/fullscreen_menu_item"
        android:showAsAction="ifRoom"
        android:title="@string/Fullscreen"
        android:visible="true">
    </item>
    <item
        android:id="@+id/style_menu_item"
        android:showAsAction="ifRoom"
        android:title="@string/Change_Style"
        android:visible="true">
        <menu>
            <item
                android:id="@+id/style_1_menu_item"
                android:title="@string/Book_1"
                android:visible="false"/>
            <item
                android:id="@+id/style_2_menu_item"
                android:title="@string/Book_2"
                android:visible="false"/>
        </menu>
    </item>
    <item
        android:id="@+id/bilingual_ebook_menu_item"
        android:showAsAction="ifRoom"
        android:title="@string/Activate_bilingual_ebook"
        android:visible="false">
        <menu>
            <item
                android:id="@+id/bilingual_ebook_1_menu_item"
                android:title="@string/From_Book_1"
                android:visible="false"/>
            <item
                android:id="@+id/bilingual_ebook_2_menu_item"
                android:title="@string/From_Book_2"
                android:visible="false"/>
        </menu>
    </item>
    <item
        android:id="@+id/audio_menu_item"
        android:showAsAction="ifRoom"
        android:title="@string/Extract_Audio"
        android:visible="false">
        <menu>
            <item
                android:id="@+id/audio_1_menu_item"
                android:title="@string/Book_1"
                android:visible="false"/>
            <item
                android:id="@+id/audio_2_menu_item"
                android:title="@string/Book_2"
                android:visible="false"/>
        </menu>
    </item>

</menu>