<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

	<RelativeLayout
	    android:id="@+id/RelativeLayout2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:layout_margin="10dp"
	    android:orientation="vertical">
	
	    <TextView
	        android:id="@+id/changeFontColorTV"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:text="@string/change_Font_Color"
	        android:textSize="18sp" />
	
	    <TextView
	        android:id="@+id/changeBackgroundColorTV"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/spinnerColor"
	        android:text="@string/ChangeBackgroundColor"
	        android:textSize="18sp" />
	
	    <TextView
	        android:id="@+id/changeFontTV"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/spinnerBackgroundColor"
	        android:text="@string/ChangeFont"
	        android:textSize="18sp" />
	
	    <Spinner
	        android:id="@+id/spinnerFontFamily"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/changeFontTV"
	        android:entries="@array/FontStyle" />
	
	    <Spinner
	        android:id="@+id/spinnerBackgroundColor"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/spinnerColor"
	        android:layout_toRightOf="@+id/changeBackgroundColorTV"
	        android:entries="@array/ColorBack" />
	
	    <TextView
	        android:id="@+id/changeMarginTV"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/spinnerAlign"
	        android:text="@string/Margin"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:id="@+id/changeLineHeightTV"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/spinnerFontFamily"
	        android:text="@string/LineHeight"
	        android:textSize="18sp" />
	
	    <Spinner
	        android:id="@+id/spinnerLineHeight"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBottom="@+id/spinnerAlign"
	        android:layout_alignParentLeft="true"
	        android:layout_alignRight="@+id/changeBackgroundColorTV"
	        android:layout_alignTop="@+id/spinnerAlign"
	        android:entries="@array/LineHeight" />
	
	    <Spinner
	        android:id="@+id/spinnerLeftMargin"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignTop="@+id/spinnerRightMargin"
	        android:layout_toLeftOf="@+id/spinnerAlign"
	        android:entries="@array/Margin" />
	
	    <Spinner
	        android:id="@+id/spinnerRightMargin"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/spinnerAlign"
	        android:layout_below="@+id/changeMarginTV"
	        android:entries="@array/Margin" />
	
	    <Spinner
	        android:id="@+id/spinnerAlign"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/changeTextAlignTV"
	        android:layout_toRightOf="@+id/spinnerLineHeight"
	        android:entries="@array/testAlignOption" />
	
	    <Spinner
	        android:id="@+id/spinnerFontSize"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_above="@+id/changeTextAlignTV"
	        android:layout_alignLeft="@+id/changeFontSizeTV"
	        android:entries="@array/FontSize" />
	
	    <TextView
	        android:id="@+id/changeFontSizeTV"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/spinnerBackgroundColor"
	        android:layout_toRightOf="@+id/spinnerFontFamily"
	        android:layout_alignLeft="@+id/changeTextAlignTV"
	        android:text="@string/FontSize"
	        android:textSize="18sp" />
	
	    <Spinner
	        android:id="@+id/spinnerColor"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/changeTextAlignTV"
	        android:layout_alignParentTop="true"
	        android:entries="@array/ColorFont" />
	
	    <TextView
	        android:id="@+id/changeTextAlignTV"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/changeLineHeightTV"
	        android:layout_alignBottom="@+id/changeLineHeightTV"
	        android:layout_alignLeft="@+id/spinnerAlign"
	        android:text="@string/TextAlign"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textSize="18sp" />
	
	    <Button
	        android:id="@+id/buttonDefault"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_below="@+id/spinnerRightMargin"
	        android:text="@string/DefaultSettings" />
	
	</RelativeLayout>
</RelativeLayout>